<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tuling.robot.activities.EventsActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="24sp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12dp"
                android:text="@string/back" >
            </Button>

            <EditText
                android:id="@+id/etEvents"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:hint="@string/events_hint"
                android:layout_weight="4" >
            </EditText>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12dp"
                android:text="@string/search" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="8">
        <ListView
            android:id="@+id/eventsListView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            ></ListView>
    </RelativeLayout>

</LinearLayout>